--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "client",
+  "name": "future-fs-02",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "predeploy": "npm run build",
+  "deploy": "npx gh-pages -d dist",
+  "preview": "vite preview"
+   },
   "dependencies": {
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
